@@ -1,3 +1,7 @@
+lldpd (0.9.3)
+  * Change:
+    + Do not rely on support of constructors for liblldpctl.
+
 lldpd (0.9.2)
   * Change:
     + Ability to add/remove/replace custom TLV from lldpcli.
